# libconfigfile

./: CMakeLists.txt  README.md
src/: ConfigReader.cpp  ConfigReader.h  Database.cpp  Database.h  main.cpp
